...
            "isCurrentDevice": false
        }
    ],
    "habits": [
        {
            "id": "a9ec8196-ef79-41df-9658-b28785ea163a",
            "name": "Read 20 min",
            "polarity": "Positive",
            "position": 0,
            "isPrivate": false,
            "createdAt": 1787302800000,
            "editedAt": 1787302800000,
            "deletedAt": null
...
